examen_practico/src/main/java/com/example/examenpractico/errors/handler/RestResponseEntityExceptionHandler.java
package com.example.examenpractico.errors.handler;

import org.springframework.context.support.DefaultMessageSourceResolvable;
import org.springframework.http.HttpHeaders;
import org.springframework.http.HttpStatus;
import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.MethodArgumentNotValidException;
import org.springframework.web.bind.annotation.ControllerAdvice;
import org.springframework.web.bind.annotation.ExceptionHandler;
import org.springframework.web.context.request.WebRequest;
import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;

import java.time.LocalDateTime;
import java.util.LinkedHashMap;
import java.util.Map;

import com.example.examenpractico.errors.PuntuacionIncompletasException;
import com.example.examenpractico.errors.RegistroNoEncontradoException;
import com.example.examenpractico.errors.RespuestaCorrectaFaltanteException;
import com.example.examenpractico.errors.RespuestasIncompletasException;
import com.example.examenpractico.errors.ZonaHorariaErroneaException;

@ControllerAdvice
public class RestResponseEntityExceptionHandler extends ResponseEntityExceptionHandler {
	@ExceptionHandler(value = { RegistroNoEncontradoException.class })
	public ResponseEntity<Object> handleNotFound(RuntimeException ex, WebRequest request) {
		Map<String, Object> body = new LinkedHashMap<>();
		body.put("timestamp", LocalDateTime.now());
		body.put("message", ex.getMessage());
		return new ResponseEntity<>(body, HttpStatus.NOT_FOUND);
	}

	@ExceptionHandler(value = { PuntuacionIncompletasException.class, RespuestaCorrectaFaltanteException.class,
			RespuestasIncompletasException.class, ZonaHorariaErroneaException.class })
	public ResponseEntity<Object> handleBadRequest(RuntimeException ex, WebRequest request) {
		Map<String, Object> body = new LinkedHashMap<>();
		body.put("timestamp", LocalDateTime.now());
		body.put("message", ex.getMessage());
		return new ResponseEntity<>(body, HttpStatus.BAD_REQUEST);
	}

	@Override
	protected ResponseEntity<Object> handleMethodArgumentNotValid(MethodArgumentNotValidException ex,
			HttpHeaders headers, HttpStatus status, WebRequest request) {
		String errorMessage = ex.getBindingResult().getFieldErrors().stream()
				.map(DefaultMessageSourceResolvable::getDefaultMessage).findFirst().orElse(ex.getMessage());
		Map<String, Object> body = new LinkedHashMap<>();
		body.put("timestamp", LocalDateTime.now());
		body.put("message", errorMessage);
		return new ResponseEntity<>(body, HttpStatus.BAD_REQUEST);
	}

}
